		- Implemented missing pure pursuit guidance ("aampure").
		- Add new 'boosterFuelMass' and 'cruiseFuelMass' fields to missile config that allow missiles to have a fuel usage that can affect mass when the new field 'useFuel' is true.
- Competition:
	- Add some checks for lacking an AI or an airborne AI being landed/splashed to the scoring for being considered as wrecked (MIA).
- RWP:
	- Use the current planetary body, not Kerbin for remote orchestration.

v1.6.1.0
IMPROVEMENTS / FIXES
 - General:
	- Fix TweakScale config for Typhoon engine.
	- Reduce min size, scaling increment for procArmor panels.
	- Internal refactor of vessel spawning/moving.
	- EAS-2 External Combat Seat now has a unique model(credit: Eclipse) to help differentiate it from the stock EAS-1. 
- UI:
	- Maintain the camera angle and distance when switching vessels with the Vessel Switcher (page up/down).
- Vessel Mover:
	- Abort vessel selection and reset state when closing/hiding the VM window.
- Vessel Spawning:
	- Use the better Vessel Mover lowering routines to lower spawned craft to the terrain. 'Ease-in Speed' is now the same as 'Min Lower Speed' in VM.
	- Fix the black screen caused by an invalid camera target during custom template spawning.
	- Maintain the camera angle when switching to spawn locations.
	- Also maintain the camera distance if bringing the current vessel with us when switching to spawn locations.
- AI:
	- Lower the minimum extend abort time to 1s.
	- Set the main throttle axis group for the VTOL AI and the wheel throttle axis group for ground AI. (pitch, roll, yaw axis groups are already being set.)
- Detectors:
	- Adjust IRST display implementation.
	- Adds new 'omniDetection' field to RadarWarningReciever (default true). If false, RWR will only detect Radar missiles immediately, some changes to missile detection and CM response.